--- a/src/Arkivverket.Arkade.Core/Resources/Messages.resx
+++ b/src/Arkivverket.Arkade.Core/Resources/Messages.resx
@@ -124,25 +124,25 @@
     <value>{0} occurrences of {1}</value>
   </data>
   <data name="AnalyseCountCharsDescription" xml:space="preserve">
-    <value>Counts number of characters in a file</value>
+    <value>Counts the number of characters in a file</value>
   </data>
   <data name="AnalyseCountCharsMessage" xml:space="preserve">
     <value>{0} characters</value>
   </data>
   <data name="AnalyseCountNullDescription" xml:space="preserve">
-    <value>Counts number of occurrences of 'null' in the field</value>
+    <value>Counts the number of occurrences of null in the field</value>
   </data>
   <data name="AnalyseCountNullMessage" xml:space="preserve">
-    <value>{0} occurrences of 'null'</value>
+    <value>{0} occurrences of null</value>
   </data>
   <data name="AnalyseCountRecordDefinitionOccurrencesDescription" xml:space="preserve">
-    <value>Counts amount of records per record type</value>
+    <value>Counts the number of records for each record type</value>
   </data>
   <data name="AnalyseCountRecordDefinitionOccurrencesMessage" xml:space="preserve">
     <value>{0} records</value>
   </data>
   <data name="AnalyseCountRecordsDescription" xml:space="preserve">
-    <value>Counts amount of records in a file</value>
+    <value>Counts the number of records in a file</value>
   </data>
   <data name="AnalyseCountRecordsMessage" xml:space="preserve">
     <value>Total: {0} records</value>
@@ -160,13 +160,13 @@
     <value>Longest/shortest value: {0}/{1}</value>
   </data>
   <data name="AnalyseFindMinMaxValuesDescription" xml:space="preserve">
-    <value>Finds the smallest and largest value in the field</value>
+    <value>Finds the lowest and highest value in the field</value>
   </data>
   <data name="AnalyseFindMinMaxValuesMessage" xml:space="preserve">
-    <value>Smallest/largest value: {0}/{1}</value>
+    <value>Lowest/highest value: {0}/{1}</value>
   </data>
   <data name="AnalyseFrequenceListDescription" xml:space="preserve">
-    <value>Counts the amount of occurrences of each value in the field</value>
+    <value>Counts the number of occurrences of each value in the field</value>
   </data>
   <data name="AnalyseFrequenceListMessage" xml:space="preserve">
     <value>{0} occurrences of {1}</value>
@@ -190,7 +190,7 @@
     <value>Invalid birth number: {0}</value>
   </data>
   <data name="ControlBooleanValueDescription" xml:space="preserve">
-    <value>Validate values in a boolean field</value>
+    <value>Validates values in a boolean field</value>
   </data>
   <data name="ControlBooleanValueMessage" xml:space="preserve">
     <value>Found non-boolean values: {0}</value>
@@ -203,10 +203,10 @@
 Actual checksum: {1}</value>
   </data>
   <data name="ControlChecksumMessage_ChecksumMissing" xml:space="preserve">
-    <value>Did not find any checksum in the ADDML-file</value>
+    <value>No checksum found in the ADDML-file</value>
   </data>
   <data name="ControlChecksumMessage_UnknownChecksumAlgorithm" xml:space="preserve">
-    <value>Unknown checksum-algorithm: {0}</value>
+    <value>Unknown checksum algorithm: {0}</value>
   </data>
   <data name="ControlCodesDescription" xml:space="preserve">
     <value>Validates that defined codes are used, and that used codes are defined in the codelist</value>
@@ -233,10 +233,10 @@ Actual checksum: {1}</value>
     <value>Checks that existing files are defined in ADDML, and that files defined in ADDML are existing</value>
   </data>
   <data name="ControlExtraOrMissingFilesMessage1" xml:space="preserve">
-    <value>Present in ADDML, missing from archive</value>
+    <value>Present in ADDML but missing from archive</value>
   </data>
   <data name="ControlExtraOrMissingFilesMessage2" xml:space="preserve">
-    <value>Present in archive, missing from ADDML</value>
+    <value>Present in archive but missing from ADDML</value>
   </data>
   <data name="ControlFixedLengthDescription" xml:space="preserve">
     <value>Validates given record length (fixed format only)</value>
@@ -245,7 +245,7 @@ Actual checksum: {1}</value>
     <value>Mismatch between given record length ({0}) and actual record length ({1})</value>
   </data>
   <data name="ControlForeignKeyDescription" xml:space="preserve">
-    <value>Validate foreign keys</value>
+    <value>Validates foreign keys</value>
   </data>
   <data name="ControlForeignKeyMessage1" xml:space="preserve">
     <value>Invalid foreign key: The value [{0}] does not exist in the referred field {1}</value>
@@ -260,13 +260,13 @@ Actual checksum: {1}</value>
     <value>Validates uniqueness of the key (primary eller alternate)</value>
   </data>
   <data name="ControlKeyMessage" xml:space="preserve">
-    <value>The following primary key values are non-uniques: {0}</value>
+    <value>The following primary key values are not unique: {0}</value>
   </data>
   <data name="ControlMaxLengthDescription" xml:space="preserve">
     <value>Checks whether the stated maximum length is actually the largest length in the field</value>
   </data>
   <data name="ControlMaxLengthMessage" xml:space="preserve">
-    <value>Values larger than the maximum length: {0}</value>
+    <value>Values longer than the maximum length: {0}</value>
   </data>
   <data name="ControlMinLengthDescription" xml:space="preserve">
     <value>Checks whether the stated minimum length is actually the smallest length in the field</value>
@@ -278,7 +278,7 @@ Actual checksum: {1}</value>
     <value>Checks the field for null-values</value>
   </data>
   <data name="ControlNotNullMessage" xml:space="preserve">
-    <value>NULL-values exists</value>
+    <value>NULL values exists</value>
   </data>
   <data name="ControlNotUsedRecordDefDescription" xml:space="preserve">
     <value>Checks if this record type is used in the dataset</value>
@@ -317,7 +317,7 @@ Actual checksum: {1}</value>
     <value>{0}: The number of characters in the FixedLength field [{1}] does not match the number of characters summed for the record definition [{2}].</value>
   </data>
   <data name="ExceptionReadingAddmlFile" xml:space="preserve">
-    <value>Error while reading ADDML.
+    <value>Error while loading ADDML.
 {0}</value>
   </data>
   <data name="LogMessageFinishedTesting" xml:space="preserve">
