--- a/src/Arkivverket.Arkade.GUI/Resources/GUI.resx
+++ b/src/Arkivverket.Arkade.GUI/Resources/GUI.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -131,7 +131,7 @@
     <value>An error has occurred: {0}</value>
   </data>
   <data name="ErrorReadingArchive" xml:space="preserve">
-    <value>Error when reading archive: {0}</value>
+    <value>Error when loading archive: {0}</value>
   </data>
   <data name="FileException_ErrorWithChosenFile" xml:space="preserve">
     <value>An error occurred with the chosen file</value>
@@ -158,16 +158,16 @@
     <value>Restart Arkade</value>
   </data>
   <data name="RestartArkadeDialogTitle" xml:space="preserve">
-    <value>Restart Arkade</value>
+    <value>Restarting of Arkade</value>
   </data>
   <data name="RestartArkadeForChangesToTakeEffectPrompt" xml:space="preserve">
-    <value>Arkade needs a restart to apply the changes. Do you want to restart now?</value>
+    <value>Arkade needs to be restarted for the changes to be applied. Do you want to do the restart now?</value>
   </data>
   <data name="ShowAboutDialogButtonText" xml:space="preserve">
     <value>Om Arkade 5</value>
   </data>
   <data name="ShowToolsDialogButtonText" xml:space="preserve">
-    <value>Verktøy</value>
+    <value>Tools</value>
   </data>
   <data name="ShowWebPageButtonText" xml:space="preserve">
     <value>Webpage</value>
@@ -176,25 +176,25 @@
     <value>Validate xml</value>
   </data>
   <data name="TestName_NumberOfArchiveParts" xml:space="preserve">
-    <value>Find amount of archive parts</value>
+    <value>Find the number of archive parts</value>
   </data>
   <data name="TestName_NumberOfArchives" xml:space="preserve">
-    <value>Find amount of archives</value>
+    <value>Find the number of archives</value>
   </data>
   <data name="TestName_NumberOfClasses" xml:space="preserve">
-    <value>Find amount of classes</value>
+    <value>Find the number of classes</value>
   </data>
   <data name="TestName_NumberOfClassesInMainClassificationSystemWithoutSubClassesorFolders" xml:space="preserve">
-    <value>Find amont of classes in pri classification system without sub classes/folders</value>
+    <value>Find the number of classes in the primary classification system without subclasses/subfolders</value>
   </data>
   <data name="TestName_NumberOfClassificationSystems" xml:space="preserve">
-    <value>Find amount of classification systems</value>
+    <value>Find the number of classification systems</value>
   </data>
   <data name="TestName_NumberOfFolders" xml:space="preserve">
-    <value>Find amount of folders</value>
+    <value>Find the number of folders</value>
   </data>
   <data name="TestName_StatusOfArchiveParts" xml:space="preserve">
-    <value>Find status on archive parts</value>
+    <value>Find the status on archive parts</value>
   </data>
   <data name="TestName_ValidateAddmlDataobjectsChecksums" xml:space="preserve">
     <value>Validate checksums</value>
@@ -203,7 +203,7 @@
     <value>Validate xml according to schema</value>
   </data>
   <data name="UnsavedTestResultsOnExitWarning" xml:space="preserve">
-    <value>If the application is exited now, the current test results will be lost. Do you still want to exit?</value>
+    <value>If the application is closed now, the current test results will be lost. Do you still want to close?</value>
   </data>
   <data name="SerilogFormatConfig" xml:space="preserve">
     <value>{Timestamp:yyyy-MM-ddTHH:mm:ss.fff} [{Level}] {SourceContext} {Message}{NewLine}{Exception}</value>
