--- a/src/Arkivverket.Arkade.GUI/Resources/SettingsGUI.resx
+++ b/src/Arkivverket.Arkade.GUI/Resources/SettingsGUI.resx
@@ -130,19 +130,19 @@
     <value>Arkade processing area</value>
   </data>
   <data name="ArkadeProcessingAreaLocation_Info" xml:space="preserve">
-    <value>Arkade processing area is a directory, "arkade-tmp", where temporary files are placed during processing of the archive extraction, and where system- and error logs are saved. A location with writing rights must be chosen.</value>
+    <value>Arkade processing area is a directory, "arkade-tmp", where temporary files are placed during processing of the archive extract, and where system- and error logs are saved. A location with writing rights must be chosen.</value>
   </data>
   <data name="ArkadeProcessingAreaLocation_Warning" xml:space="preserve">
     <value>NB! The processing area might contain sensitive data and/or large amounts of data.</value>
   </data>
   <data name="OtherInstancesRunningOnProcessingAreaChangeMessage" xml:space="preserve">
-    <value>Please close all instances of Arkade before changing the location of Arkade processing area.</value>
+    <value>Please close other instances of Arkade before changing the location of Arkade processing area.</value>
   </data>
   <data name="SelectDarkModeText" xml:space="preserve">
     <value>Use dark mode</value>
   </data>
   <data name="UndefinedArkadeProcessingAreaLocationDialogMessage" xml:space="preserve">
-    <value>Please choose a processing available to Arkade</value>
+    <value>Please choose a processing area available to Arkade</value>
   </data>
   <data name="UndefinedArkadeProcessingAreaLocationDialogTitle" xml:space="preserve">
     <value>Missing valid processing area</value>
