--- a/src/Arkivverket.Arkade.Core/Resources/FormatAnalysisResultFileContent.resx
+++ b/src/Arkivverket.Arkade.Core/Resources/FormatAnalysisResultFileContent.resx
@@ -121,10 +121,10 @@
     <value>File name</value>
   </data>
   <data name="HeaderFileExtension" xml:space="preserve">
-    <value>Extension</value>
+    <value>File extension</value>
   </data>
   <data name="HeaderFormatId" xml:space="preserve">
-    <value>PUID</value>
+    <value>Format ID</value>
   </data>
   <data name="HeaderFormatName" xml:space="preserve">
     <value>Format name</value>
